wp-content/themes/blankslate/style.css
/* ... */
.sticky{}.bypostauthor{}.wp-caption{}.wp-caption-text{}.gallery-caption{}.alignright{}.alignleft{}.aligncenter{}.screen-reader-text{clip:rect(1px, 1px, 1px, 1px);position:absolute !important}

#header {
	margin: auto;
	padding: 40px 80px 40px 80px;
}

.content {
	margin: auto;
	padding: 0 80px 0 80px;
}

#branding {
	display:inline;
	float: left;
}

.menu-burger {
	margin-top: 20px;
	float: right;
}

.menu-burger-icon {
	width: 22px;
	height: 13px;
}

.menu-cross {
	margin-top: 20px;
	float: right;
}

.menu-cross-icon {
	width: 20px;
	height: 20px;
}

.menu-block {
	display: none;
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
	background-color: black;
	z-index: 999;
}

.menu-block ul {
	text-align: center;
	list-style-type: none;
	font-size: 3.75rem;
	font-weight: 900;
	margin-top: 80px;
}
.menu-block ul a {
	color: white;
}

.menu-block .menu-cross,
.menu-block .logo {
	display:block;
	position:relative;
	fill: white;
}

.menu-block .menu-cross{
	text-align: right;
	margin: 60px 80px 0 0;
}

.menu-block .logo {
	text-align: left;
	margin: 40px 0 0 80px;
}

.splash {
	height: 500px;
	overflow:hidden;
	background-repeat: no-repeat;
	background-size: cover;  
	background-image: url('images/splash.png');
}

.logo {
    display: block;
    width: 70px;
    height: 70px;
}

.logo-icon {
	width: 70px;
	height: 70px;
}

a.arrow-down {
	text-align:center;
	width: 60px;
	height: 27px;
	display: block;
}

a.arrow-down {
	margin: 75px auto 185px auto;
}


h1.projects {
	margin-bottom: 5.625rem;
	text-align: center;
	font-weight: 900;
	font-size: 2.5rem;
}

.project {
	position: relative;
	margin-bottom: 30px;
	min-height: 280px;
}

.project img:hover {
    opacity: 0.6;
}

.project-small {
	max-width: 280px;
}

.project a, .project a:active {
	color: black;
	z-index: 99;
	position: relative;
	font-size: 1rem;
	font-weight: 600;
}

.project .title-left-down,
.project .title-right,
.project .title-left {
	border-top: 3px solid black;
	position: absolute;
	max-width: 200px;
}

.project .title-right {
	text-align: left;
	padding: 10px 20px 0 20px;
}

.project .title-left {
	text-align: right;
	padding: 10px 20px 0 20px;
}

.project .title-left-down {
	text-align: right;
	top: 310px;
	padding: 10px 20px 0 20px;
}

.project-bottom {
	position: absolute;
	bottom: 0;
}

.project-right {
	position: absolute;
	right: 0;
}

.project-left {
	position: absolute;
	left: 0;
}

.project-side-column {
	display:none;
}

.margin-left {
	margin-left: 30px;
}
.margin-right {
	margin-right: 30px;
}
.text-right {
	text-align: right;
}

.blue {
	background-color: #cde8fa;
}

.gray {
	background-color: #f4f4f4;
}

.quote {
	margin: 0 auto 0 auto;
	padding-bottom: 40px;
}

.quote .column {
	max-width: 590px;
}
.quote .quote-icon {
	color: #ba3963;
	font-weight: 700;
	font-size: 10.625rem;
	margin-bottom: 0;
	margin-top: 100px;
	padding-bottom: 0;
	line-height: 0.5em;
	padding-left: 10px;
}
.quote .quote-text {
	font-weight: 800;
	font-style: italic;
	font-size: 1.5625rem;
	padding-left: 18px;
	margin-bottom: 0;
	line-height: 1.875rem;
	letter-spacing: -1px;
}

.about {
	margin: 0 auto 70px auto;
	padding-top: 160px;
}

.about .column {
	max-width: 590px;
}

.about h2 {
	font-size: 1.75rem;
	font-weight: 800;
	padding-left: 18px;
}

.about p {
	font-size: 1.125rem;
	padding-left: 18px;
	margin-bottom: 0;
	font-weight: 300;
}

aside.contact {
	float:left;
	font-size: 0.875rem;
	font-weight: 300;
	position: absolute;
	margin-left: -20px;
	padding-top: 160px;
}

aside.contact ul {
	margin: 0;
	padding: 0;
}

aside.contact li {
	list-style-type: none;
	margin: 0;
	padding: 0;
}

aside.contact .header {
	margin-top: 10px;
	font-weight: 600;
}

div.contact {
	font-size: 0.875rem;
	font-weight: 300;
	margin-bottom: 60px;
}

div.contact ul {
	margin: 0;
	padding: 0;
	max-width: 590px !important;
}

div.contact li {
	list-style-type: none;
	margin: 0;
	padding: 0;
	font-weight: 300;
}

div.contact .header {
	margin-top: 10px;
	color: #ba3963;
	font-size: 0.875rem;
	font-weight: 600;
	text-transform: uppercase;
}

.single h1.title {
	font-size: 2.1875rem;
	font-weight: 600;
	margin-bottom: 60px;
	line-height: 1.8rem;
	letter-spacing: -1px;
}

.single .category {
	font-size: 2.5rem;
	font-weight: 300;
	margin-top: 30px;
	letter-spacing: -1px;
}

.single h2 {
	font-size: 1.25rem;
	font-weight: 600;
	margin-bottom: 0;
}

.single p {
	font-size: 1rem;
	margin-bottom: 0;
}


.single .block {
	margin-bottom: 60px;
}

.single .single-image {
	margin-bottom: 100px;
}

.single .quote {
	margin-bottom: 0;
	width: auto;
	font-size: 1.875rem;
	font-weight: 800;
	padding-left: 30px;
	border-left: 10px solid black;
	line-height: 2.3125rem;
	letter-spacing: -1px;
	font-style: italic;
}

.single h3 {
	font-size: 1.375rem;
	font-weight: 600;
	line-height: 1.2rem;
}

.single .info {
	font-size: 0.875rem;
	margin-bottom: 52px;
}

.line {
	border-top: 1px solid #dcdcdc;
	margin-bottom: 80px;
}

.button-up {
	display: block;
	margin: 0 auto 120px;
	width: 115px;
	padding: 8px 0 8px 0;
	border: 3px solid #ba3963;
	text-align: center;
	color: #ba3963;
	font-size: 0.875rem;
	font-weight: 600;
	text-transform: uppercase;
	line-height: 1rem;
}

.single .button-up {
	margin-top: 50px;
}

.button-up:hover {
	opacity: 0.8;
	color: white;
	background-color: #ba3963;
}


a, a:hover {
	text-decoration: none;
}

footer {
	padding: 0 80px 40px 80px;
	position: relative;
	overflow-x: hidden;
}

footer .row.profile .columns.profile{
	max-width: 590px;
}

footer .row.profile p {
	margin-left: 15px;
}

footer .row.profile .row .column {
	margin-bottom: 30px;
}

footer .social-stuff {
	position: relative;

}

footer .social-icon-bottom {
	position: absolute;
	bottom: 0px;
	left: 0px;
}

footer .social-icon-top {
	position: absolute;
	top: 0px;
	left: 0px;
}

footer .social-icon {
	width: 48px;
	height: 48px;
	color: #ba3963;
	padding: 0 !important;
	margin-left: 15px;
}

footer .first-social-icon {
	margin-left: 15px;
}
/* ... */

